--- a/SASS/_main.scss
+++ b/SASS/_main.scss
@@ -63,13 +63,14 @@
         padding-top: $spacing-lg*4;     
         padding-bottom: $spacing-lg;
         width: $full-width;
-        background-color: $white;
+        background-color: $black;
         margin-bottom: $spacing-lg;
         padding-left: $spacing-lg ;
     }
 
-    .main__informacion h1 , p{
-        color: $white;
+    .main__informacion p{
+        color: $black;
+
         
     }
 
@@ -198,6 +199,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         width: $full-width;
         padding-bottom: $spacing-lg*2;
         background-color: $white;
@@ -287,9 +289,7 @@
     margin-left:$spacing-lg*2.5;
     margin-top: $spacing-lg;
     margin-bottom: $spacing-lg;
-    color: $white;
-    
-    
+    color: $white;  
 }
 
 
@@ -298,9 +298,6 @@
     margin-left: $spacing-lg;
     margin-top: $spacing-sm;
     margin-bottom: $spacing-lg;
-    background-color: $white;
-    padding-left: $spacing-lg;
-
 }
 
 
@@ -490,7 +487,8 @@
  }
 
  .main__containerNosotros2{
-     background-color: $grey;     
+     background-color: $grey; 
+    
  }
 
  .containerNosotros2__info{
@@ -501,7 +499,7 @@
     height: auto;    
     font-family: $f-family3;
     padding-bottom: $spacing-lg; 
-    color: $black;
+    color: $white;
          
  }
 
