--- a/SASS/_mediaQueries.scss
+++ b/SASS/_mediaQueries.scss
@@ -111,7 +111,8 @@
         width: 90%;
         grid-column-gap: $spacing;
         grid-row-gap: $spacing;
-        padding: $spacing*2.5;    
+        padding: $spacing*2.5;   
+        color: $white; 
 
     }
 
@@ -127,7 +128,7 @@
         width: 100%;
     }
 
-    .informacion{
+    .info__nosotros{
         background-color: $blue-dark;
         border-radius: $spacing; 
         margin: $spacing-lg;
@@ -148,7 +149,12 @@
      /* Inicio Contacto*/
 
      .main__containerContacto{
-        padding-bottom: $spacing-lg*50;
+        padding-bottom: $spacing-lg*100;
+        p{
+            color: $black;
+            font-family: $f-family3;
+            font-size: $f-large*5;
+        }
     }
 
     .containerContacto__form{
@@ -214,6 +220,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        padding-right: $spacing-lg*2;
         p{
             font-size: $f-large*6;
             padding-left: $spacing-lg*2;
@@ -226,6 +233,17 @@
     } 
 
     /* Fin Contacto*/  
+
+    /* Inicio Tecnicas*/
+
+    .tecnicas1__lista1{
+        border: $blue-dark 2px solid;        
+        max-width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* Fin Tecnicas/
 
     /* Inicio Redes Socailes*/
 
@@ -284,6 +302,9 @@
         padding-bottom: $spacing*5;
         align-items: center;
         padding-top: $spacing-lg;
+            p{
+                color: $black;
+            }
         
 
     }
@@ -379,22 +400,35 @@
         width: 100%;
     }
 
-    .informacion{
+    .info__nosotros{
         background-color: $blue-dark;
         border-radius: $spacing; 
         margin: $spacing-lg;
             h2{
-                color: #000;
+                color: $white;
                 font-size: $f-title*1.8;
             }
      }
 
      /* Fin Inicio Nosotros*/
 
+     .tecnicas1__lista1{
+        border: $blue-dark 2px solid;
+        min-width: 90%;
+        max-width: 80%;
+        display: flex;
+        flex-direction: column;
+    }
+
      /* Inicio Contacto*/
 
      .main__containerContacto{
         padding-bottom: $spacing-lg*50;
+        p{
+            color: $black;
+            font-family: $f-family3;
+            font-size: $f-large*4;
+        }
     }
 
     .containerContacto__form{
@@ -460,6 +494,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        padding-right: $spacing;
         p{
             font-size: $f-large*2.5;            
         }
@@ -627,12 +662,12 @@
         width: 100%;
     }
 
-    .informacion{
+    .info__nosotros{
         background-color: $blue-dark;
         border-radius: $spacing; 
         margin: $spacing-lg;
             h2{
-                color: #000;
+                color: $white;
                 font-size: $f-title*1.3;
             }
      }
@@ -644,7 +679,12 @@
      /* Inicio Contacto*/
 
      .main__containerContacto{
-        padding-bottom: $spacing-lg*30;
+        padding-bottom: $spacing-lg*29;
+        p{
+            color: $black;
+            font-family: $f-family3;
+            font-size: $f-large*2.5;
+        }
     }
 
     .containerContacto__form{
@@ -710,6 +750,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        padding-right: $spacing;
         p{
             font-size: $f-large*1.8;
             padding-left: $spacing-lg;
@@ -735,7 +776,19 @@
 
     /* Fin Contacto*/
 
-    /* Inicio Redes Socailes*/
+    /* Inicio Tecnicas*/
+
+    .tecnicas1__lista1{
+        border: $blue-dark 2px solid;
+        min-width: 50%;
+        max-width: 50%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* Fin Tecnicas/
+
+    /* Inicio Redes Sociales*/
 
     .footer__redesSociales{
         display: flex;
@@ -875,13 +928,13 @@
         width: 100%;
     }
 
-    .informacion {
+    .info__nosotros {
     background-color: $blue-dark;
     border-radius: $spacing; 
     margin: $spacing-lg;
         
             h2{    
-                color: $black;            
+                color: $white;            
                 font-size: $f-title*.9;
             }
      }
@@ -892,7 +945,12 @@
      /* Inicio Contacto*/
 
      .main__containerContacto{
-        padding-bottom: $spacing-lg*30;
+        padding-bottom: $spacing-lg*25;
+        p{
+            color: $black;
+            font-family: $f-family3;
+            font-size: $f-large*2;
+        }
     }
 
     .containerContacto__form{
@@ -958,6 +1016,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        padding-right: $spacing;
         p{
             font-size: $f-large*1.5;
             padding-left: $spacing-lg*1.5;
@@ -984,7 +1043,16 @@
 
     /* Fin Contacto*/ 
 
-    /* Inicio Redes Socailes*/
+     /* Inicio Tecnicas*/
+
+    .tecnicas1__lista1{
+        border: $blue-dark 2px solid;
+        width: 45%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* Inicio Redes Sociales*/
 
     .footer__redesSociales{
         display: flex;
@@ -1008,7 +1076,7 @@
             
         }
     
-    /* Fin Redes Socailes*/
+    /* Fin Redes Sociales*/
     
 }
 @media screen and (min-width: 1200px){
@@ -1033,6 +1101,8 @@
         padding-top: $spacing-lg;
         width: 100%;
         max-width: 100%; 
+        border-left: $blue-dark $spacing-sm solid;
+        
     }
 
     .informacion__jumbotron{
@@ -1043,7 +1113,8 @@
         color: $black;
         padding-bottom: $spacing*5;
         align-items: center;
-        padding-top: $spacing-lg;       
+        padding-top: $spacing;  
+        padding-left: $spacing-lg*2;     
 
     }
 
@@ -1109,6 +1180,13 @@
 
     /* Inicio Tecnicas*/
     
+    .tecnicas1__lista1{
+        border: $blue-dark 2px solid;
+        width: 45%;
+        display: flex;
+        flex-direction: column;
+    }
+
     .tecnicas1__lista1 li {
         display: flex;        
         justify-content: center;
@@ -1116,13 +1194,15 @@
         font-size: $f-large;
         font-family: "Kumbh Sans", sans-serif;
         color: black;
+        
     }
 
     .tecnicas1__table  {
         display: flex;
         justify-content: center;       
         width: $full-width;
-        width: 100%;       
+        width: 100%;      
+         
             
     }
     .tecnicas1__table th, td{
@@ -1166,7 +1246,7 @@
         width: 100%;
     }
 
-    .informacion {
+    .info__nosotros {
         background-color: $blue-dark;
         border-radius: $spacing; 
         margin: $spacing-lg;
@@ -1175,7 +1255,7 @@
                 }
                 h2{ 
                     margin-top: $spacing;   
-                    color: $black;            
+                    color: $white;            
                     font-size: $f-title*.3;
                 }
          }
@@ -1186,7 +1266,12 @@
      /* Inicio Contacto*/
 
      .main__containerContacto{
-        padding-bottom: $spacing-lg*20;
+        padding-bottom: $spacing-lg*15;
+        p{
+            color: $black;
+            font-family: $f-family3;
+            font-size: $f-large*1.2;
+        }
     }
 
     .containerContacto__form{
@@ -1251,6 +1336,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        padding-right: $spacing;
         p{
             font-size: $f-medium;
             padding-left: $spacing-sm;
