--- a/SASS/_main.scss
+++ b/SASS/_main.scss
@@ -572,6 +572,7 @@
     object-fit: cover;
     width: auto;
     height: auto;
+    list-style: none;
 }
  
 .lista__miembroSuperior li img{
@@ -587,6 +588,7 @@
     width: auto;
     height: auto;
     object-fit: cover;
+    list-style: none;
 }
 
 .lista__bandas li img{
@@ -602,6 +604,7 @@
     width: auto;
     height: auto;
     object-fit: cover;
+    list-style: none;
 }
 
 .lista__inflables li img{
@@ -617,6 +620,7 @@
     width: auto;
     height: auto;
     object-fit: cover;
+    list-style: none;
 }
 
 .lista__rodillos li img{
