--- a/SASS/Estilos.css
+++ b/SASS/Estilos.css
@@ -2255,6 +2255,7 @@ img {
      object-fit: cover;
   width: auto;
   height: auto;
+  list-style: none;
 }
 
 .lista__miembroSuperior li img {
@@ -2276,6 +2277,7 @@ img {
   height: auto;
   -o-object-fit: cover;
      object-fit: cover;
+  list-style: none;
 }
 
 .lista__bandas li img {
@@ -2297,6 +2299,7 @@ img {
   height: auto;
   -o-object-fit: cover;
      object-fit: cover;
+  list-style: none;
 }
 
 .lista__inflables li img {
@@ -2318,6 +2321,7 @@ img {
   height: auto;
   -o-object-fit: cover;
      object-fit: cover;
+  list-style: none;
 }
 
 .lista__rodillos li img {
